--- a/app/src/main/res/layout/fragment_create_course.xml
+++ b/app/src/main/res/layout/fragment_create_course.xml
@@ -24,7 +24,7 @@
         android:layout_width="201dp"
         android:layout_height="37dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/ubuntu_bold"
         android:text="Enter Course Code:"
         android:textColor="#FFFFFF"
@@ -37,7 +37,7 @@
         android:layout_width="233dp"
         android:layout_height="35dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:fontFamily="@font/ubuntu_bold"
         android:text="Select Offer Session:"
         android:textColor="#FFFFFF"
@@ -75,15 +75,12 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="55dp"
+        android:layout_marginBottom="156dp"
         android:text="Save and Add Course"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.536"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/edit_course_code"
@@ -114,61 +111,60 @@
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="73dp"
-        android:layout_height="36dp"
+        android:layout_height="48dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
+        android:onClick="onCheckboxClicked"
         android:text="Fall"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="onCheckboxClicked"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <CheckBox
         android:id="@+id/checkBox2"
         android:layout_width="78dp"
-        android:layout_height="35dp"
+        android:layout_height="48dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
+        android:onClick="onCheckboxClicked"
         android:text="Winter"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toEndOf="@+id/checkBox"
-        android:onClick="onCheckboxClicked"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <CheckBox
         android:id="@+id/checkBox3"
         android:layout_width="89dp"
-        android:layout_height="35dp"
+        android:layout_height="48dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
+        android:onClick="onCheckboxClicked"
         android:text="Summer"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toEndOf="@+id/checkBox2"
-        android:onClick="onCheckboxClicked"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <Button
-        android:id="@+id/session_button"
-        android:layout_width="73dp"
-        android:layout_height="35dp"
-        android:text="Order"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="318dp" />
-
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="318dp"
-        android:layout_height="182dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
-        android:contentDescription="@string/placeholder_text"
+    <EditText
+        android:id="@+id/add_prereq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3">
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+    <Button
+        android:id="@+id/prereq_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:text="ADD"
+        app:layout_constraintStart_toEndOf="@+id/add_prereq"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
