--- a/app/src/main/res/layout/fragment_taken.xml
+++ b/app/src/main/res/layout/fragment_taken.xml
@@ -2,10 +2,20 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginTop="?attr/actionBarSize"
     tools:context=".TakenFragment">
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="596dp"
+        android:layout_height="879dp"
+        android:src="@drawable/new_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/takenn"
