--- a/app/src/main/res/layout/fragment_timeline_list.xml
+++ b/app/src/main/res/layout/fragment_timeline_list.xml
@@ -7,8 +7,9 @@
     android:name="com.example.b07.TimelineFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
+    android:background="@drawable/new_background"
     app:layoutManager="LinearLayoutManager"
     tools:context=".TimelineFragment"
     tools:listitem="@layout/fragment_timeline" />
