--- a/app/src/main/res/layout/fragment_want.xml
+++ b/app/src/main/res/layout/fragment_want.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,8 +8,68 @@
     tools:context=".WantFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/want"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/taken"
+        android:layout_width="400dp"
+        android:layout_height="500dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/fragment_course" />
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="29dp"
+        android:text="Delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/edittext_delete"
+        app:layout_constraintTop_toBottomOf="@+id/taken"
+        app:layout_constraintVertical_bias="0.492"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/edittext_insert"
+        android:layout_width="80dp"
+        android:layout_height="48dp"
+        android:layout_alignBottom="@+id/edittext_insert"
+        android:layout_marginStart="29dp"
+        android:layout_marginEnd="4dp"
+        android:layout_toEndOf="@+id/edittext_insert"
+        android:inputType="text"
+        android:hint="e.g cscb07"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_insert"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taken"
+        app:layout_constraintVertical_bias="0.496"
+        tools:ignore="MissingConstraints,NotSibling" />
+
+    <Button
+        android:id="@+id/btn_insert"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="13dp"
+        android:text="Insert"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/edittext_delete"
+        app:layout_constraintTop_toBottomOf="@+id/taken"
+        app:layout_constraintVertical_bias="0.492"
+        tools:ignore="MissingConstraints" />
+
+    <EditText
+        android:id="@+id/edittext_delete"
+        android:layout_width="80dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="13dp"
+        android:inputType="text"
+        android:hint="e.g cscb07"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_insert"
+        app:layout_constraintTop_toBottomOf="@+id/taken"
+        app:layout_constraintVertical_bias="0.496"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
