--- a/app/src/main/res/layout/fragment_want.xml
+++ b/app/src/main/res/layout/fragment_want.xml
@@ -8,7 +8,7 @@
     tools:context=".WantFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/taken"
+        android:id="@+id/want"
         android:layout_width="400dp"
         android:layout_height="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
